add log4js for logging

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.2.0",
     "express": "~4.12.4",
     "jade": "~1.9.2",
+    "log4js": "^0.6.27",
     "morgan": "~1.5.3",
     "mount-routes": "^1.0.3",
     "serve-favicon": "~2.2.1"
