--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
     "serve-favicon": "~2.2.1"
   },
   "devDependencies": {
+    "chai": "^3.2.0",
+    "gulp": "^3.9.0",
+    "gulp-mocha": "^2.1.3",
+    "gulp-watch": "^4.3.4",
+    "mocha": "^2.2.5",
+    "supertest": "^1.0.1",
     "supervisor": "^0.9.1"
   }
 }
