--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "log4js": "^0.6.27",
     "morgan": "~1.5.3",
     "mount-routes": "^1.0.3",
-    "serve-favicon": "~2.2.1"
+    "serve-favicon": "~2.2.1",
+    "simditor-qn": "^1.0.1"
   },
   "devDependencies": {
     "chai": "^3.2.0",
