--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chai": "^3.2.0",
     "gulp": "^3.9.0",
     "gulp-mocha": "^2.1.3",
+    "gulp-run": "^1.6.11",
     "gulp-watch": "^4.3.4",
     "kp": "^1.1.0",
     "mocha": "^2.2.5",
