--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "mount-routes": "^1.0.3",
     "qn": "^1.1.0",
     "serve-favicon": "~2.2.1",
-    "simditor-qn": "^1.0.1"
+    "simditor-qn": "^1.0.2",
+    "uploadify": "^1.0.2"
   },
   "devDependencies": {
     "chai": "^3.2.0",
