add npm start post callback for open http://127.0.0.1:3010/

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "./node_modules/.bin/supervisor bin/www"
+    "start": "./node_modules/.bin/supervisor bin/www",
+    "poststart":"node bin/open_browser.js"
   },
   "dependencies": {
     "body-parser": "~1.12.4",
