--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "./node_modules/.bin/supervisor bin/www",
-    "poststart":"node bin/open_browser.js"
+    "prestart":"node bin/open_browser.js"
   },
   "dependencies": {
     "body-parser": "~1.12.4",
