--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "prestart": "node bin/open_browser.js"
   },
   "dependencies": {
+    "art-template": "^4.12.2",
     "body-parser": "~1.12.4",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.12.4",
-    "jade": "~1.9.2",
+    "express-art-template": "^1.0.0",
     "log4js": "^0.6.27",
     "morgan": "~1.5.3",
     "mount-routes": "^1.0.3",
